# jansky

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  MAINTAINING.md  Makefile  README.md  mkdocs.yml  mkdocs_hooks.py  pyproject.toml
.claude/agents/: notebook-author.md
.claude/skills/dataset-watch/: SKILL.md
.claude/skills/find-radio-papers/: SKILL.md
.claude/skills/radio-mastodon/: SKILL.md
.claude/skills/radio-records/: SKILL.md
.claude/skills/radio-source-lookup/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  gh-pages.yml  links.yml  notebooks.yml
containers/: Dockerfile  casa.Dockerfile  compose.yaml  gnuradio.Dockerfile
docs/: data-formats.md  field-notes.md  github.md  glossary.md  index.md  learning-paths.md  mastodon.md  math-preliminaries.md  notation.md  papers-timeline.md  projects.md  records.md  references.md  resources.md  setup.md  start-here.md  telescopes.md  videos.md  visual-tour.md
docs/assets/: telescopes.kml
docs/chapters/: 50_era_problem_sets.md
docs/data/: archived_links.yml  radio_github.yml
docs/javascripts/: mathjax.js
notebooks/: 01_what_is_radio_astronomy.ipynb  02_physics_of_radio_emission.ipynb  03_signals_noise_radiometer.ipynb  04_antennas_and_receivers.ipynb  05_sdr_basics.ipynb  06_hydrogen_line.ipynb  07_why_interferometry.ipynb  08_aperture_synthesis.ipynb  09_deconvolution_clean.ipynb  10_open_archives.ipynb  11_hi_rotation_curve.ipynb  12_vla_imaging.ipynb  13_pulsars.ipynb  14_multiwavelength.ipynb  15_capstone.ipynb  16_data_formats_and_ecosystem.ipynb  17_coherent_interferometry_kraken.ipynb  18_fast_radio_bursts.ipynb  19_eht_and_vlbi.ipynb  20_pulsar_timing_arrays.ipynb  21_seti.ipynb  22_cosmic_microwave_background.ipynb  23_solar_and_jupiter.ipynb  24_molecular_and_masers.ipynb  25_intensity_interferometry.ipynb  26_meteor_scatter.ipynb  27_vlf_ionosphere.ipynb  28_gnuradio_flowgraphs.ipynb  29_virgo_pictor.ipynb  30_rasdr_radio_sky.ipynb  31_mathslab_fourier_convolution.ipynb  32_mathslab_matched_filtering.ipynb  33_mathslab_noise_rfi.ipynb  34_mathslab_coordinates_time.ipynb  35_mathslab_calibration.ipynb  36_mathslab_special_functions.ipynb  37_polarisation_faraday.ipynb  38_machine_learning.ipynb  39_rfi_mitigation.ipynb  40_lightning_sferics.ipynb  (+9 more)
plans/: 01-chapters-from-research-and-videos.md  02-chapters-from-projects.md  03-appendices-from-math-preliminaries.md  04-data-formats-and-seti-software.md  05-ci-pipeline.md  06-publish-docs.md  07-notebook-hygiene.md  08-quality-tooling.md  09-accuracy-hardening.md  10-polarisation-faraday.md  11-ska-era-refresh.md  12-ml-in-radio.md  13-rfi-and-calibration-chapters.md  14-real-data-starter-set.md  15-sps-spd-readers.md  16-real-archive-chapters.md  17-learning-journey-map.md  18-solutions-and-accessibility.md  19-synchrotron-radiation.md  20-free-free-and-hii.md  21-radio-galaxies-and-source-counts.md  README.md
scripts/: check_dataset_urls.py  dataset_watch.py  generate_figures.py  github_stats.py
src/jansky/: __init__.py  _mastodon_tui.py  catalog.py  constants.py  data.py  eor.py  formats.py  freefree.py  interferometry.py  lightning.py  mastodon_reader.py  meteor.py  molecular.py  observing.py  optics.py  plotting.py  polarization.py  rfi.py  seti.py  signals.py  solar.py  sourcecounts.py  synchrotron.py  timing.py  transients.py  units.py  vlf.py
tests/: test_accuracy.py  test_catalog.py  test_data.py  test_dataset_watch.py  test_doc_links.py  test_eor.py  test_formats.py  test_freefree.py  test_github_data.py  test_interferometry.py  test_lightning.py  test_mastodon_reader.py  test_mastodon_tui.py  test_meteor.py  test_molecular.py  test_observing.py  test_optics.py  test_plotting.py  test_polarization.py  test_rfi.py  test_seti.py  test_signals.py  test_solar.py  test_sourcecounts.py  test_synchrotron.py  test_timing.py  test_transients.py  test_units.py  test_vlf.py
