[project]
name = "jansky"
version = "0.1.0"
description = "A hands-on, documentation-rich radio astronomy course in Python"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Joe Barbere" }]
keywords = [
    "radio-astronomy",
    "astronomy",
    "astrophysics",
    "education",
    "interferometry",
    "tutorial",
]

# Core dependencies: everything the Part I notebooks and the `jansky` helper
# package need to run. Kept deliberately lean and pip-installable on all
# platforms. Heavier / fragile tools live in the optional extras below or in
# the containers (CASA, GNU Radio, PRESTO).
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "pyvo>=1.5",
    "spectral-cube>=0.6.5",
    "radio-beam>=0.3.7",
    "reproject>=0.13",
    "regions>=0.9",
    "requests>=2.31",
    "tqdm>=4.66",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
# Pulsar timing / search tooling (Chapter 13). Pip-installable but heavier.
pulsar = [
    "pint-pulsar>=1.0",
    "your>=0.6.7",
]
# Galactic dynamics for the HI rotation-curve chapter (Chapter 11 diversion).
dynamics = [
    "galpy>=1.9",
]
# Software-defined radio (Chapters 5-6). Requires the system librtlsdr library;
# prefer the gnuradio container if you don't have an SDR toolchain installed.
sdr = [
    "pyrtlsdr>=0.3",
]
# SETI / Breakthrough Listen stack (Chapter 16): GUPPI/filterbank I/O and the
# Doppler-drift search. Heavy (some pieces want a GPU) — keep optional.
seti = [
    "blimpy>=2.1",
    "turbo-seti>=2.3",
]
# Interferometry data interchange (Chapter 16): pyuvdata round-trips between
# Measurement Set, UVFITS and UVH5; SigMF helpers.
formats = [
    "pyuvdata>=3.0",
    "sigmf>=1.2",
]
# Single-dish HI/continuum with VIRGO (the engine behind PICTOR).
hi = [
    "astro-virgo>=2.0",
]
# Machine learning for radio astronomy (Chapter 38). scikit-learn carries the
# base path (offline, lightweight); a true CNN can use torch if you install it
# yourself — the chapter guards the torch import and degrades to the sklearn path.
ml = [
    "scikit-learn>=1.3",
]
# Terminal UI for the Mastodon reader (python -m jansky.mastodon_reader), with
# inline image viewing via terminal graphics protocols.
tui = [
    "textual>=0.60",
    "textual-image>=0.7",
    "pillow>=10.0",
]
cmb = [
    "healpy>=1.16",
]

[project.urls]
Homepage = "https://github.com/joebarbere/jansky"
Documentation = "https://joebarbere.github.io/jansky/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jansky"]

[dependency-groups]
# Authoring & QA toolchain (installed by `uv sync`, not shipped to consumers).
dev = [
    "ruff>=0.15.20",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "nbmake>=1.5",
    "jupyterlab>=4.2",
    "nbformat>=5.10",
    "seaborn>=0.13",
    "mkdocs-material>=9.5",
    "mkdocs-jupyter>=0.24",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]  # line length handled by formatter; prose-heavy docstrings

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["jansky"]
# The TUI module needs the optional `tui` extra (textual/pillow); exclude it from
# the default coverage floor so a base `uv sync` run isn't penalised for it.
omit = ["*/_mastodon_tui.py"]

[tool.coverage.report]
# Enforced only when coverage is collected (a `--cov` run, e.g. CI's unit-test
# step); the plain `pytest` and the nbmake notebook runs are unaffected.
fail_under = 85
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
# Scoped to the helper package; the notebooks and tests are not type-checked.
files = ["src/jansky"]
python_version = "3.10"
# The scientific stack (astropy, scipy, matplotlib, textual, ...) ships partial or
# no stubs; don't fail on their missing types. We still check our own code.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
